<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity4">

    <TextView
            android:text="@string/phone_254713742"
            android:layout_width="232dp"
            android:layout_height="18dp"
            android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="16dp" android:textColor="#322F3C"/>
    <TextView
            android:text="@string/email_danielochieng967_gmail_com"
            android:layout_width="232dp"
            android:layout_height="18dp"
            android:id="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="12dp" android:textColor="#322F3C"/>
    <TextView
            android:text="@string/track_android"
            android:layout_width="232dp"
            android:layout_height="18dp"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.496" android:textColor="#322F3C"/>
    <ImageView
            android:layout_width="135dp"
            android:layout_height="114dp" app:srcCompat="@drawable/andela"
            android:id="@+id/imageView" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"/>
    <EditText
            android:layout_width="326dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:text="@string/daniel_o_oketch"
            android:ems="10"
            android:id="@+id/editText"
            android:textAlignment="center" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:hint="@string/name"
            app:layout_constraintHorizontal_bias="0.492"/>
    <TextView
            android:text="@string/country_kenya"
            android:layout_width="232dp"
            android:layout_height="18dp"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="16dp" android:textColor="#322F3C"/>

</androidx.constraintlayout.widget.ConstraintLayout>