<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/bgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_alc_4_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.228"
            app:layout_constraintVertical_bias="0.057" android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="bold|italic" android:textAlignment="center" android:textSize="36sp"
            android:typeface="sans"
            android:fontFamily="serif" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp" android:id="@+id/textView"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:textColor="#3F51B5"/>
    <Button
            android:text="@string/about_alc"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button1"
            android:textSize="24sp" android:textStyle="bold|italic" android:typeface="normal"
            android:fontFamily="serif" style="@android:style/Widget.Button" android:background="@drawable/btn_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.17"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.495"/>

    <Button
            android:text="@string/my_profile"
            android:layout_width="175dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button2"
            android:textSize="24sp" android:textStyle="bold|italic" android:typeface="normal"
            android:fontFamily="serif" style="@android:style/Widget.Button"
            android:layout_marginTop="84dp" app:layout_constraintTop_toBottomOf="@+id/button1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/btn_rounded" app:layout_constraintHorizontal_bias="0.495"/>
    <ImageView
            android:layout_width="115dp"
            android:layout_height="89dp" app:srcCompat="@drawable/andela"
            android:id="@+id/imageView2" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.49"
            android:contentDescription="@string/image"/>


</androidx.constraintlayout.widget.ConstraintLayout>