<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity2">


    <TextView
            android:text="@string/the_andela_learning_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="56dp" android:textStyle="bold" android:textColor="#2B2730"
            android:textSize="30sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/a_community_empowering_the_next_generation_of_african_technology_leaders"
            android:layout_width="323dp"
            android:layout_height="36dp"
            android:id="@+id/textView3" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/join_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textStyle="bold"
            android:textAlignment="center" android:textColor="#0C0B0F" android:textSize="18sp"
            android:typeface="monospace" android:fontFamily="sans-serif-black" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="The Andela Learning Community is a network of people, technologists, and tech enthusiasts across Africa dedicated to learn how to use technology to solve humanities problems."
            android:layout_width="338dp"
            android:layout_height="73dp"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="88dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintVertical_bias="0.208"/>
</androidx.constraintlayout.widget.ConstraintLayout>